--- a/016-Database/deployments/docker/docker-compose.yml
+++ b/016-Database/deployments/docker/docker-compose.yml
@@ -8,3 +8,22 @@ services:
     working_dir: /app
     volumes:
       - ../../:/app
+    networks:
+      - go_db_net
+
+  mysql: 
+    image: mysql:5.7
+    restart: always
+    container_name: go_db_mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: courses
+      MYSQL_PASSWORD: root
+    ports:
+      - "3306:3306"
+    networks:
+      - go_db_net
+
+networks:
+  go_db_net:
+      name: go_db
